--- a/angular.json
+++ b/angular.json
@@ -7,34 +7,29 @@
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
-      "prefix": "app",
+      "prefix": "k",
       "schematics": {},
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/koala-angular-tools",
-            "index": "src/index.html",
-            "main": "src/main.ts",
-            "polyfills": "src/polyfills.ts",
-            "tsConfig": "src/tsconfig.app.json",
+            "outputPath": "demo-example",
+            "index": "example/index.html",
+            "main": "example/main.ts",
+            "tsConfig": "example/tsconfig.app.json",
+            "polyfills": "example/polyfills.ts",
             "assets": [
-              "src/favicon.ico",
-              "src/assets"
+              { "glob": "**/*", "input": "example/assets/", "output": "/assets/" },
+              { "glob": "example/favicon.ico", "input": "/src", "output": "/" }
             ],
             "styles": [
-              "src/styles.css"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "example/styles.scss"
             ],
             "scripts": []
           },
           "configurations": {
             "production": {
-              "fileReplacements": [
-                {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.prod.ts"
-                }
-              ],
               "optimization": true,
               "outputHashing": "all",
               "sourceMap": false,
@@ -43,7 +38,13 @@
               "aot": true,
               "extractLicenses": true,
               "vendorChunk": false,
-              "buildOptimizer": true
+              "buildOptimizer": true,
+              "fileReplacements": [
+                {
+                  "replace": "example/environments/environment.ts",
+                  "with": "example/environments/environment.prod.ts"
+                }
+              ]
             }
           }
         },
@@ -67,17 +68,18 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "main": "src/test.ts",
-            "polyfills": "src/polyfills.ts",
-            "tsConfig": "src/tsconfig.spec.json",
-            "karmaConfig": "src/karma.conf.js",
-            "styles": [
-              "src/styles.css"
-            ],
+            "main": "example/test.ts",
+            "karmaConfig": "./karma.conf.js",
+            "polyfills": "example/polyfills.ts",
+            "tsConfig": "example/tsconfig.spec.json",
             "scripts": [],
+            "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "example/styles.scss"
+            ],
             "assets": [
-              "src/favicon.ico",
-              "src/assets"
+              { "glob": "**/*", "input": "example/assets/", "output": "/assets/" },
+              { "glob": "example/favicon.ico", "input": "/src", "output": "/" }
             ]
           }
         },
@@ -85,12 +87,10 @@
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": [
-              "src/tsconfig.app.json",
-              "src/tsconfig.spec.json"
+              "example/tsconfig.app.json",
+              "example/tsconfig.spec.json"
             ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
+            "exclude": []
           }
         }
       }
@@ -123,5 +123,5 @@
       }
     }
   },
-  "defaultProject": "koala-angular-tools"
+  "defaultProject": "kland-theme",
 }
