--- a/angular.json
+++ b/angular.json
@@ -38,28 +38,27 @@
         }
       }
     },
-    "tester": {
+    "foo-tester": {
+      "root": "projects/foo-tester/",
+      "sourceRoot": "projects/foo-tester/src",
       "projectType": "application",
-      "schematics": {},
-      "root": "projects/tester",
-      "sourceRoot": "projects/tester/src",
       "prefix": "app",
+      "schematics": {},
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/tester",
-            "index": "projects/tester/src/index.html",
-            "main": "projects/tester/src/main.ts",
-            "polyfills": "projects/tester/src/polyfills.ts",
-            "tsConfig": "projects/tester/tsconfig.app.json",
-            "aot": false,
+            "outputPath": "dist/foo-tester",
+            "index": "projects/foo-tester/src/index.html",
+            "main": "projects/foo-tester/src/main.ts",
+            "polyfills": "projects/foo-tester/src/polyfills.ts",
+            "tsConfig": "projects/foo-tester/tsconfig.app.json",
             "assets": [
-              "projects/tester/src/favicon.ico",
-              "projects/tester/src/assets"
+              "projects/foo-tester/src/favicon.ico",
+              "projects/foo-tester/src/assets"
             ],
             "styles": [
-              "projects/tester/src/styles.css"
+              "projects/foo-tester/src/styles.css"
             ],
             "scripts": []
           },
@@ -67,8 +66,8 @@
             "production": {
               "fileReplacements": [
                 {
-                  "replace": "projects/tester/src/environments/environment.ts",
-                  "with": "projects/tester/src/environments/environment.prod.ts"
+                  "replace": "projects/foo-tester/src/environments/environment.ts",
+                  "with": "projects/foo-tester/src/environments/environment.prod.ts"
                 }
               ],
               "optimization": true,
@@ -93,63 +92,79 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "tester:build"
+            "browserTarget": "foo-tester:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "tester:build:production"
+              "browserTarget": "foo-tester:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "tester:build"
+            "browserTarget": "foo-tester:build"
           }
         },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "main": "projects/tester/src/test.ts",
-            "polyfills": "projects/tester/src/polyfills.ts",
-            "tsConfig": "projects/tester/tsconfig.spec.json",
-            "karmaConfig": "projects/tester/karma.conf.js",
-            "assets": [
-              "projects/tester/src/favicon.ico",
-              "projects/tester/src/assets"
-            ],
+            "main": "projects/foo-tester/src/test.ts",
+            "polyfills": "projects/foo-tester/src/polyfills.ts",
+            "tsConfig": "projects/foo-tester/tsconfig.spec.json",
+            "karmaConfig": "projects/foo-tester/karma.conf.js",
             "styles": [
-              "projects/tester/src/styles.css"
+              "projects/foo-tester/src/styles.css"
             ],
-            "scripts": []
+            "scripts": [],
+            "assets": [
+              "projects/foo-tester/src/favicon.ico",
+              "projects/foo-tester/src/assets"
+            ]
           }
         },
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": [
-              "projects/tester/tsconfig.app.json",
-              "projects/tester/tsconfig.spec.json",
-              "projects/tester/e2e/tsconfig.json"
+              "projects/foo-tester/tsconfig.app.json",
+              "projects/foo-tester/tsconfig.spec.json"
             ],
             "exclude": [
               "**/node_modules/**"
             ]
           }
-        },
+        }
+      }
+    },
+    "foo-tester-e2e": {
+      "root": "projects/foo-tester-e2e/",
+      "projectType": "application",
+      "prefix": "",
+      "architect": {
         "e2e": {
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
-            "protractorConfig": "projects/tester/e2e/protractor.conf.js",
-            "devServerTarget": "tester:serve"
+            "protractorConfig": "projects/foo-tester-e2e/protractor.conf.js",
+            "devServerTarget": "foo-tester:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "tester:serve:production"
+              "devServerTarget": "foo-tester:serve:production"
             }
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": "projects/foo-tester-e2e/tsconfig.e2e.json",
+            "exclude": [
+              "**/node_modules/**"
+            ]
           }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "koala-angular-tools"
 }
